texi2html/test/invalid/res/texi_bad_style_nesting/bad_style_nesting.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename bad_style_nesting.info

@node Top
@top Test for bad style @@-command nestings


@code{
@quotation
in quotation}
@end quotation

@bye
